feat: secure kageRegister, add conflict exception, refactor validate email in ninja creation